mobile alignment issue

--- a/src/sass/pages/_auth.scss
+++ b/src/sass/pages/_auth.scss
@@ -24,7 +24,7 @@
     }
 
     img {
-        width: 363px;
+        width: 100%;
         margin-bottom: 109px;
     }
 }
